--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-git+https://github.com/MKN-BOTZ/pyrogram 
+pyrogram
 tgcrypto
-aiofiles 
-aiohttp
-requests
-bs4
-pymongo
-dnspython
+pymongo[srv]
+motor
 marshmallow
 umongo
-motor
+requests
+bs4
+imdbpy
+datetime
+aiohttp
+aiofiles 
+dnspython
 youtube-search-python
 youtube-search
 yt-dlp
@@ -25,3 +27,4 @@ wheel
 ujson
 wget
 pytz
+pip
